--- a/index.html
+++ b/index.html
@@ -31,32 +31,38 @@
                     <legend>Add card</legend>
                     <label for="inp-title">Title</label>
                     <input type="text" name="title" id="inp-title" required>
+                    <p class="error title-err">Please pick a title for this task.</p>
 
                     <label for="inp-desc">Description</label>
-                    <textarea id="inp-desc" name="description" required></textarea>
+                    <textarea id="inp-desc" name="description" minlength="2" required></textarea>
+                    <p class="error desc-err">Please describe this task.</p>
 
                     <label for="inp-creator">Creator</label>
-                    <select name="creator" id="inp-creator">
+                    <select name="creator" id="inp-creator" required>
                         <option value="">-</option>
                         <option value="Viktor Kjeldal">Viktor Kjeldal</option>
                         <option value="John Appleseed">John Appleseed</option>
                         <option value="Albert Einstein">Albert Einstein</option>
                     </select>
+                    <p class="error creator-err">Please pick the creator of the task.</p>
 
-                    <label for="inp-estimate">Estimate time (in hours)</label>
-                    <input type="number" name="estimate" id="inp-estimate" min="1" max="8">
+                    <label for="inp-estimate">Estimate time (between 1 - 8 hours)</label>
+                    <input type="number" name="estimate" id="inp-estimate" min="1" max="8" required>
+                    <p class="error estimate-err">Please give a time estimate of the task.</p>
 
-                    <label for="inp-deadline">Deadline</label>
-                    <input type="date" name="deadline" id="inp-deadline">
+                    <label for=" inp-deadline">Deadline</label>
+                    <input type="date" name="deadline" id="inp-deadline" required>
+                    <p class="error deadline-err">Please pick a deadline for the task.</p>
 
                     <label for="inp-priority">Priority</label>
-                    <select name="priority" id="inp-priority">
+                    <select name="priority" id="inp-priority" required>
                         <option value="">-</option>
                         <option value="Low">Low</option>
                         <option value="Medium">Medium</option>
                         <option value="High">High</option>
                     </select>
-                    <button class="add-new" type="submit">Add new card</button>
+                    <p class="error priority-err">Please pick the priority of this task.</p>
+                    <button class="add-new" type="submit" disabled>Add new card</button>
                 </fieldset>
             </form>
         </section>
