--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trello Clone</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.scss">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
@@ -31,12 +31,16 @@
                     <legend>Add card</legend>
                     <label for="inp-title">Title</label>
                     <input type="text" name="title" id="inp-title" placeholder="Card title" required>
-                    <p class="error title-err">Please pick a title for this task.</p>
+                    <p class="error title-err"><span class="material-icons">
+                            error
+                        </span>Please pick a title for this task.</p>
 
                     <label for="inp-desc">Description</label>
                     <textarea id="inp-desc" name="description" minlength="2" placeholder="Describe the card"
                         required></textarea>
-                    <p class="error desc-err">Please describe this task.</p>
+                    <p class="error desc-err"><span class="material-icons">
+                            error
+                        </span>Please describe this task.</p>
 
                     <label for="inp-creator">Creator</label>
                     <select name="creator" id="inp-creator" required>
@@ -45,16 +49,22 @@
                         <option value="John Appleseed">John Appleseed</option>
                         <option value="Albert Einstein">Albert Einstein</option>
                     </select>
-                    <p class="error creator-err">Please pick the creator of the task.</p>
+                    <p class="error creator-err"><span class="material-icons">
+                            error
+                        </span>Please pick the creator of the task.</p>
 
                     <label for="inp-estimate">Estimate time (between 1 - 8 hours)</label>
                     <input type="number" name="estimate" id="inp-estimate" min="1" max="8" placeholder="1-8" required>
-                    <p class="error estimate-err">Please give a time estimate of the task.</p>
+                    <p class="error estimate-err"><span class="material-icons">
+                            error
+                        </span><span>Please give a time estimate of the task.</span></p>
 
                     <label for=" inp-deadline">Deadline</label>
                     <input type="date" class="placeholder" name="deadline" id="inp-deadline" placeholder="xx/xx/xxx"
                         required>
-                    <p class="error deadline-err">Please pick a deadline for the task.</p>
+                    <p class="error deadline-err"><span class="material-icons">
+                            error
+                        </span>Please pick a deadline for the task.</p>
 
                     <label for="inp-priority">Priority</label>
                     <select name="priority" id="inp-priority" required>
@@ -63,7 +73,9 @@
                         <option value="Medium">Medium</option>
                         <option value="High">High</option>
                     </select>
-                    <p class="error priority-err">Please pick the priority of this task.</p>
+                    <p class="error priority-err"><span class="material-icons">
+                            error
+                        </span>Please pick the priority of this task.</p>
 
                     <label for="inp-color">Color</label>
                     <select name="color" id="inp-color" required>
@@ -77,7 +89,9 @@
                         <option value="custom">Custom</option>
                     </select>
                     <input type="color" name="customColor" id="custom-color">
-                    <p class="error color-err">Please pick the priority of this task.</p>
+                    <p class="error color-err"><span class="material-icons">
+                            error
+                        </span>Please pick the priority of this task.</p>
                     <button class="add-new" type="submit">Add new card</button>
                     <button class="clear-form">Start over</button>
                 </fieldset>
